# eval-caregiver-intake-agent

./: .gitignore  INTEGRATION.md  INTEGRATION_PROMPT.xml  README.md  pyproject.toml
data/responses/: compliance_cpr_missing.json  compliance_cpr_present.json  compliance_cpr_unknown.json  elig_100_pay_rate_min_hours_mismatch.json  elig_101_shift_length_constraint_alignment.json  elig_102_start_date_delay_waitlist_and_preclear.json  elig_103_vax_and_health_screen_gap_resolution.json  elig_104_transport_proof_and_case_routing.json  elig_105_employment_classification_alignment.json  elig_106_specialty_skills_assessment_and_training_path.json  elig_107_home_environment_constraints_capture.json  elig_108_gender_and_comfort_preferences_boundary_setting.json  elig_109_evv_and_documentation_readiness.json  geo_no_alternatives.json  geo_over_restricted.json
data/scenarios/: compliance_missing_cases.json  eligibility_improvement_cases.json  geo_over_restriction_cases.json
src/eval_caregiver/agent/: __init__.py  base.py  mock_agent.py
src/eval_caregiver/graders/: __init__.py  base.py
src/eval_caregiver/reporting/: json_report.py  scorecard.py
src/eval_caregiver/runner/: cli.py  executor.py  quality_gates.py
src/eval_caregiver/scenarios/: compliance_missing.py  geo_over_restriction.py  loader.py
src/eval_caregiver/schemas/: __init__.py  caregiver.py  conversation.py  geo.py  grader_results.py  (+1 more)
tests/: conftest.py  test_code_graders.py  test_json_responses.py  test_loader.py  test_mock_agent.py  test_model_graders.py  test_quality_gates.py  test_runner.py  test_schemas.py
(+12 files in other folders)
